--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -8,4 +8,5 @@ j2ee.server.home=C:/AppServers/glassfish5/glassfish
 j2ee.server.instance=[C:\\AppServers\\glassfish5\\glassfish;C:\\AppServers\\glassfish5\\glassfish\\domains\\domain1]deployer:gfv5ee8:localhost:4848
 j2ee.server.middleware=C:/AppServers/glassfish5
 netbeans.user=C:\\Users\\hack_\\AppData\\Roaming\\NetBeans\\16
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 wa.copy.client.jar.from=C:\\AppServers\\glassfish5\\glassfish\\domains\\domain1\\generated\\xml
