--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,6 +7,7 @@ debug.classpath=${javac.classpath}::${jar.content.additional}:${run.classpath}
 display.browser=true
 dist.dir=dist
 dist.jar=${dist.dir}/${jar.name}
+endorsed.classpath=
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -35,4 +36,5 @@ project.inventario-productos-war=inventario-productos-war
 reference.inventario-productos-ejb.dist-ear=${project.inventario-productos-ejb}/dist/inventario-productos-ejb.jar
 reference.inventario-productos-war.dist-ear=${project.inventario-productos-war}/dist/inventario-productos-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
